# SynthNorm-augmentation

./: .gitignore  Demo.ipynb  LICENSE  README.md  pyproject.toml
synthnormaug/: __init__.py  artefacts_augmentation.py  augmentation_pipelines.py  perlin_noise.py
synthnormaug/synthetic_intensity_augmentation/: SyntheticGMMAugmentation.py  __init__.py
synthnormaug/synthetic_intensity_augmentation/gmm_params/: flair_gmm_params.npz  t1_gmm_params.npz  t2_gmm_params_multi.npz  t2_gmm_params_single.npz
